--- a/pom.xml
+++ b/pom.xml
@@ -42,10 +42,32 @@
 			<version>2.9.8</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
-		<dependency>
+	<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>6.0.13.Final</version>
-		</dependency>
+	</dependency>
+	<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>5.2.13.Final</version>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-orm</artifactId>
+		<version>4.3.16.RELEASE</version>
+	</dependency>
+		
+	<dependency>
+		<groupId>org.springframework.data</groupId>
+		<artifactId>spring-data-jpa</artifactId>
+		<version>1.11.12.RELEASE</version>
+	</dependency>
+		
+	<dependency>
+		<groupId>org.postgresql</groupId>
+		<artifactId>postgressql</artifactId>
+		<version>42.2.2</version>
+	</dependency>	
   </dependencies>
 </project>
